test/integration/invalid/semanticErr/function/functionOverloadingPairs.wacc
# attempted overloading with pairs as parameter types

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f(pair(int, char) x) is
		return 0
	end
  int f(pair(int, int) x) is
    return 1
  end
  int x = call f(null);
  println x
end
